--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -9,6 +9,9 @@
 }
 
 .main {
-    padding: 1rem;
+    margin: .5rem;
+    padding: .5rem;
+    border: 1px solid #FFF;
+    border-radius: 1rem;
 }
 
