--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -17,3 +17,45 @@
     text-align: center;
 }
 
+.header .information {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.header .information p {
+    margin: .5rem;
+    font-size: 1.125rem;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    gap: .25rem;
+}
+
+.header .information p::before {
+    content: '';
+    display: inline-block;
+    width: 1.125rem;
+    height: 1.125rem;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.header .information p.job::before {
+    background-image: url('../images/icons/job.svg');
+}
+
+.header .information p.location::before {
+    background-image: url('../images/icons/location.svg');
+}
+
+.header .information p.phone::before {
+    background-image: url('../images/icons/phone.svg');
+}
+
+.header .information p.email::before {
+    background-image: url('../images/icons/email.svg');
+}
