--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -4,11 +4,26 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
+}
+
+.header::after {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    width: 2rem;
+    height: 2rem;
+    background-image: url('../images/icons/header.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .header .photo {
     width: 200px;
     height: 200px;
+    margin: 1rem;
     border-radius: 50%;
     border: 0.5rem outset #7A85C1;
 }
@@ -59,4 +74,29 @@
 
 .header .information p.email::before {
     background-image: url('../images/icons/email.svg');
+}
+
+@media only screen and (min-width: 768px) {
+    .header {
+        display: grid;
+        grid-template-areas: 
+        "photo title" 
+        "photo information";
+    }
+
+    .header .photo {
+        grid-area: photo;
+        margin: 0 auto;
+
+    }
+
+    .header .title {
+        grid-area: title;
+        text-align: start;
+        max-width: 220px;;
+    }
+
+    .header .information {
+        grid-area: information;
+    }
 }
