feat(accordion): Implement accordion.js and update accordion.css to add interactive functionality.

--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -45,9 +45,7 @@
 }
 
 .acordeon .content {
-    display: none;
-}
-
-.acordeon.open .content{
-    display: inline-block;
+    max-height: 0;
+    overflow: hidden; /*Esconde o conteúdo que está fora da altura máxima*/
+    transition: max-height 0.3s ease-in-out; /*Animação*/
 }
