--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -46,7 +46,7 @@
 
 .acordeon .content {
     max-height: 0;
-    padding: 0; 
+    padding: 0 1rem; 
     overflow: hidden;
     opacity: 0; /*Esconde o conteúdo que está fora da altura máxima*/
     transition: max-height 0.3s ease-in-out; /*Animação*/
