--- a/assets/css/languages.css
+++ b/assets/css/languages.css
@@ -5,12 +5,12 @@
     flex-wrap: wrap;
 
     margin: 0;
-    padding: 1rem 1rem 1rem 2rem;;
+    padding: 0;
     list-style: none;
 }
 
 .languages li {
-    margin: 0 1rem;
+    margin-right: 1rem;
     padding: 1rem;
 
     display: flex;
