--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -1,46 +1,18 @@
-.experience {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: 100%;
-    list-style: none;
-}
-
 .experience li {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    margin: 1rem 0;
-    padding: 0;
+    position: relative;
+    cursor: pointer;
 }
 
-.experience .title {
-    margin-bottom: .125rem;
-    font-weight: 700;
-    font-size: 1.25rem;
+.experience li::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -2px; 
+    width: 0;
+    height: 2px;
+    background-color: currentColor; 
+    transition: width 0.3s ease; 
 }
-
-.experience .date {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+.experience li:hover::after {
+    width: 100%; 
 }
-
-.experience .date::before {
-    content:'';
-    display: inline-block;
-    width: 1.25rem;
-    height: 1.25rem;
-    background-image: url('../images/icons/calendar.svg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin-right: .5rem;
-}
-
-.experience li p{
-    margin: .25rem;
-}
-
