--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -1,41 +1,33 @@
-.content .skills {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+.html {
+    max-width: 100%;
+    width: 100px;
+    height: 120px;
+
+    display: inline-flex;
+}
+.css {
+    max-width: 100%;
+    width: 100px;
+    height: 100px;
+
+    display: inline-flex;
 }
 
+.js {
+    max-width: 100%;
+    width: 100px;
+    height: 100px;
 
-.content .skills div {
-    width: 100%;
-}
-
-.content .skills .hard {
-    padding: 0;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
+    display: inline-flex;
 }
 
 .hard {
-    list-style: none;
+   display: flex;
+    list-style: nome;
+    gap: 100px;
+    margin-left: 20px;
 }
 
-.hard li img {
-    width: 3rem;
-}
-
-.soft li {
-    margin-bottom: .5rem;
-}
-
-@media screen and (min-width: 768px) {
-    .content .skills {
-        flex-direction: row;
-        justify-content: space-around;
-    }
-
-
+.skills {
+    display: flexbox;
 }
